--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@
     border: none;
     color: white;
     cursor: pointer;
+    font-size: 35pz;
 }
 
 .question-display {
@@ -52,25 +53,69 @@
 
 }
 
+.question-display #choice-1-btn {
+    min-width: 250px;
+    color: black;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 8px 35px;
+
+}
+
+.question-display #choice-2-btn {
+    min-width: 250px;
+    color: black;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 8px 35px;
+
+}
+
+.question-display #choice-3-btn {
+    min-width: 250px;
+    color: black;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 8px 35px;
+
+}
+
+.question-display #choice-4-btn {
+    min-width: 250px;
+    color: black;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 8px 35px;
+
+}
+
+
+
 .question-display #timer-display {
     font-size: 2rem;
+    padding: 20px;
 }
 
 .question-display #answer-display {
     background-color: red;
-    padding: 10px;
+    padding: 20px;
     color: white;
-    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .question-display #next-button {
     padding: 8px 35px;
     font-size: 1rem;
     border-radius: 5px;
-    background-color: red;
+    background-color: black;
     color: #fff;
     border: none;
     cursor: pointer;
+    margin-top: 20px;
 }
 
 .question-display #next:hover {
