updated script.js to decrease time by 5 seconds if question is incorrect and to add user initials at end of score and see score history

--- a/css/style.css
+++ b/css/style.css
@@ -129,8 +129,13 @@ header {
 }
 
 footer {
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: center; */
+    position: fixed;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    
 }
 
 /*** RESPONSIVE STYLES ***/
